# robotframework-slacknotification

./: .gitignore  README.md  pyproject.toml  robot_slack_config.py  slack_groups_config.py
.github/workflows/: publish_pypi.yml
RobotSlackNotification/: __init__.py  messages.py
tests/: TestSuite.robot  test_slack.robot
tests/Pix/PixAutomatico/Pagador/: Jornada1.robot  Jornada2.robot
tests/SuperiorSuite/IntermediateSuite/IntermediateSuite0/: LowerSuite0.robot  LowerSuite1.robot
tests/SuperiorSuite/IntermediateSuite/IntermediateSuite1/: LowerSuite0.robot
